--- a/conda_pism_grids.yaml
+++ b/conda_pism_grids.yaml
@@ -7,7 +7,7 @@ dependencies:
   - backports.shutil_get_terminal_size=1.0.0=pyhd3eb1b0_3
   - blas=1.0=mkl
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.12.8=h06a4308_0
+  - ca-certificates=2021.1.19=h06a4308_0
   - cairo=1.14.12=h7636065_2
   - certifi=2020.6.20=pyhd3eb1b0_3
   - curl=7.69.1=hbc83047_0
@@ -60,7 +60,8 @@ dependencies:
   - numpy=1.16.6=py27hbc911f0_0
   - numpy-base=1.16.6=py27hde5b4d6_0
   - openjpeg=2.3.0=h05c96fa_1
-  - openssl=1.1.1i=h27cfd23_0
+  - openssl=1.1.1j=h27cfd23_0
+  - pandas=0.22.0=py27hf484d3e_0
   - pathlib2=2.3.5=py27_0
   - pcre=8.44=he6710b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
@@ -74,6 +75,8 @@ dependencies:
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pygments=2.5.2=py_0
   - python=2.7.18=h15b4118_1
+  - python-dateutil=2.8.1=pyhd3eb1b0_0
+  - pytz=2021.1=pyhd3eb1b0_0
   - readline=8.0=h7b6447c_0
   - scandir=1.10.0=py27h7b6447c_0
   - setuptools=44.0.0=py27_0
@@ -84,6 +87,7 @@ dependencies:
   - traitlets=4.3.3=py27_0
   - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
+  - xarray=0.11.3=py27_0
   - xerces-c=3.2.3=h780794e_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
